--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /aisd_lab_1_sorting/target/
 /aisd_lab_1_sorting/nbproject/
 /aisd_lab5_rbt/target/
+/aisd_lab_8_surprise/nbproject/
+/aisd_lab_8_surprise/target/
